# window-info-extra-xorg-extension

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: CMakeLists.txt
common/include/wi-extra/: define.h  proto.h
common/wi-extra/: define.h  proto.h
config/: 30-wiextra.conf
extension/: CMakeLists.txt  extension.c  extension.h  module.c
test/: CMakeLists.txt  main.cpp  test_wiextra.cpp
xlib/: CMakeLists.txt  init.c  init.h  wi.c
xlib/include/wi-extra/: wi-extra.h
